// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing resources: Header title 1`] = `
<h4
  class="ant-typography page-header css-dev-only-do-not-override-k7429z"
>
  User Management
</h4>
`;

exports[`renders correctly when listing resources: Search 1 page 1 1`] = `
<td
  class="ant-table-cell ant-table-column-sort ant-table-cell-ellipsis"
  title="april4"
>
  april4
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="petertest"
>
  petertest
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4petertest"
>
  april4petertest
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4"
>
  april4
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="petertest"
>
  petertest
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4petertest"
>
  april4petertest
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Blue"
>
  Blue
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Test"
>
  Test
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="blue"
>
  blue
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/7f5d1800-e1c2-4c31-b01d-d084b8c96bb0"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Chw"
>
  Chw
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="User"
>
  User
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="chw_demo_user"
>
  chw_demo_user
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/40fe3724-95e3-48cb-b90a-f67aebcf4120"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="John"
>
  John
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Coda"
>
  Coda
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="codademo"
>
  codademo
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/46bccd72-0505-487b-a208-9a4d2c4e033c"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Jane"
>
  Jane
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Coda"
>
  Coda
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="codademo2"
>
  codademo2
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <button
    class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link"
    type="button"
  >
    <a
      href="/admin/users/edit/718d900b-74ee-43ed-b075-3acc4e344fea"
    >
      Edit
    </a>
  </button>
  <div
    class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: user details 1`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Keycloak UUID
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 2`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Username
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          april4petertest
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 3`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Practitioner ID
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          206
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 4`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Practitioner UUID
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          c1d36d9a-b771-410b-959e-af2c04d132a2
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 5`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Practitioner status
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          inactive
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 6`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          User Type
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          <ul
            id="user-type"
          >
            <li
              data-testid="user-type"
            >
              practitioner
            </li>
          </ul>
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: yes button 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-primary ant-btn-sm"
  type="button"
>
  <span>
    Yes
  </span>
</button>
`;
